modify user model, events board models, add project and personal model to the event model app

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -131,7 +131,7 @@ html
           
         #date 2021/5/2
         #organizerpic
-        p {{ event_obj.host.username }}
+        p {{ event_obj.host.full_name }}
 
           
         #likebutton
