add eventwindow exit button & animate

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -170,6 +170,13 @@ body
         height: auto
         box-shadow: 10px 10px 25px 5px #00000026
         
+    #exitbutton
+      transform: translate(-50%, 0)
+      top: 5%
+      right: -10%
+      width: 2vw
+      height: auto
+      
     #date
       transform: translate(-50%, -50%)
       top: 15%
