--- a/static/sass/homepage.css
+++ b/static/sass/homepage.css
@@ -133,6 +133,12 @@ body {
         width: 100%;
         height: auto;
         box-shadow: 10px 10px 25px 5px #00000026; }
+    #eventwindow #eventoperate #exitbutton {
+      transform: translate(-50%, 0);
+      top: 5%;
+      right: -10%;
+      width: 2vw;
+      height: auto; }
     #eventwindow #eventoperate #date {
       transform: translate(-50%, -50%);
       top: 15%;
