--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -130,6 +130,9 @@ html
         #flag
           img#flag-y(src="{% static 'file/flag-y.png' %}")
           img#flag-n(src="{% static 'file/flag-n.png' %}")
+        
+        img#exitbutton(src="{% static 'file/exiticon.png' %}")
+          
           
         #date 2021/5/2
         #organizerpic
