add event creating window

--- a/static/sass/homepage.css
+++ b/static/sass/homepage.css
@@ -209,4 +209,57 @@ body {
       opacity: 1;
       color: white; }
 
+#eventcreatewindow {
+  position: fixed;
+  transform: translate(-50%, -50%);
+  top: 55%;
+  left: 50%;
+  width: 50%;
+  padding: 5%;
+  background-color: #F5FBFE;
+  border-radius: 5vw;
+  border: 5px solid rgba(58, 237, 194, 0.5);
+  box-shadow: 10px 10px 25px 5px #00000026;
+  z-index: 2; }
+  #eventcreatewindow h1 {
+    font-size: 4vw; }
+  #eventcreatewindow ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    white-space: nowrasp;
+    list-style-type: none;
+    margin-right: 0;
+    width: 90%; }
+  #eventcreatewindow li {
+    display: block;
+    float: left;
+    overflow: left;
+    white-space: nowrap;
+    word-break: normal;
+    word-wrap: nowrap;
+    /*font-size: 36px; */
+    font-size: 1.5vw;
+    font-family: var(--font-family-text);
+    font-style: var(--font-style-text);
+    margin-right: 10%; }
+  #eventcreatewindow .input-area {
+    width: 90%;
+    word-break: normal; }
+  #eventcreatewindow #eventtitle {
+    font-size: 2.2vw;
+    height: 10vw; }
+  #eventcreatewindow #eventsubtitle {
+    font-size: 2vw;
+    height: 2.5vw; }
+  #eventcreatewindow #eventdescription {
+    font-size: 1.7vw;
+    height: 2.5vw; }
+  #eventcreatewindow #buttons {
+    position: absolute;
+    height: 5vw;
+    width: 5vw; }
+    #eventcreatewindow #buttons #submit-btn {
+      width: 100%; }
+
 /*# sourceMappingURL=homepage.css.map */
