--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -12,3 +12,6 @@ header
         a.button(href="#") activity
       li 
         a.button(href="{{ about_us_url }}") about us
+        
+        //a.button(href="javascript:window.location.reload({{ about_us_url }})") about us
+)
