--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -142,6 +142,13 @@ body
     height: 20%
     border-radius: 5vw 0 5vw 0
   
+  #exitbtn1
+    transform: translate(-50%, 0)
+    top: 5%
+    right: -10%
+    width: 2vw
+    height: auto
+  
   #eventoperate
     position: absolute
     transform: translate(0, -50%)
@@ -169,13 +176,6 @@ body
         width: 100%
         height: auto
         box-shadow: 10px 10px 25px 5px #00000026
-        
-    #exitbutton
-      transform: translate(-50%, 0)
-      top: 5%
-      right: -10%
-      width: 2vw
-      height: auto
       
     #date
       transform: translate(-50%, -50%)
@@ -281,53 +281,89 @@ body
   box-shadow: 10px 10px 25px 5px #00000026
   z-index: 2
       
-  h1
-    font-size: 4vw
+  #exitbtn2
+    position: absolute
+    transform: translate(-50%, 0)
+    top: 3vw
+    right: 2vw
+    width: 2vw
+    height: auto
+    
+      
+  
+  #profile
+    display: flex
+    margin-bottom: 1vw
+    
+    #pic
+      height: 4vw
+      width: 4vw
+      border-radius: 2vw
+      background-color: red
+      
+    h1
+      align-items: center
+      font-size: 3.5vw
+      line-height: 100%
+      //transform: translate(0, -50%)
+      margin-left: 1vw
+      top: 50%
       
   ul
     display: flex
-    justify-content: space-around
+    //justify-content: space-around
     align-items: center
     white-space: nowrasp
     list-style-type: none
-    margin-right: 0
+    margin: 0.5vw
     width: 90%
 
   li
     display: block
     float: left
-    overflow: left
     white-space: nowrap
     word-break: normal
     word-wrap: nowrap
-
-    /*font-size: 36px;
-    font-size: 1.5vw
+    align-items: center
+    text-align:center
+    
+    font-size: 1vw
     font-family: var(--font-family-text)
     font-style: var(--font-style-text)
-    margin-right: 10%
+    margin-right: 1vw
+    padding: 0.2vw 0.5vw
+    
+    background-color: #3AEDC2
+    height: 1.5vw
+    border-radius: 1vw
+    
       
   .input-area
     width: 90%
     word-break: normal
+    margin: 0.5vw
+    border-radius: 2vw
+    padding: 0.7vw 0 0 1vw
   
   #eventtitle
     font-size: 2.2vw
-    height: 10vw
+    height: 2.5vw
     
   #eventsubtitle
-    font-size: 2vw
+    font-size: 2.2vw
     height: 2.5vw
   
   
   #eventdescription
     font-size: 1.7vw
-    height: 2.5vw
+    height: 15vw
       
   #buttons
     position: absolute
-    height: 5vw
-    width: 5vw
+    height: 5.5vw
+    width: 5.5vw
+    right: 2.5vw
+    bottom: 2.5vw
     #submit-btn
       width: 100%
 
