--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -23,12 +23,11 @@
   margin: 0
 
 body
-  background-color:#FAAD95
+  background-color:rgba(255, 195, 176, 0.6)
   width: 100%
   height: 100%
 
 //<<<<<<< HEAD
-.container
 
 #gotop 
   position: fixed;
@@ -229,3 +228,34 @@ body
       color: white
 
 //>>>>>>> 624262fa0fa70d15c8079445b5ad13cd4ca108c8
+
+#container
+  width: 30%
+  background-color: rgba(245, 251, 254, 1)
+
+  #Postcolumn
+    display: inline-flex;
+    flex-direction:column;
+
+    #header
+      radius: 83px;
+    #PostForm
+      background: #E6E8EF;
+      border-radius: 20px;
+
+  #divider
+    display: inline-flex;
+    flex-direction: row;
+
+    #line
+      height: 1px;
+      font-size:15px;
+      font-color:rgba(0, 0, 0, 1);
+
+  #board
+    display: flex;
+    flex-direction:row;
+    flex-wrap:wrap;
+    padding: 26px;
+
+    div
