--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -14,16 +14,17 @@ html
 
   body
 
-    .container
-      .PostColumn
+    #container
+      #PostColumn
         .header
           img src="./使用者的頭像"
         button #write
-        .PostForm
+        #PostForm
           .header
             img src="./使用者的頭像"
           .user
-            p #{使用者的姓名}  
+            p #{使用者的姓名} 
+        //    
           #myPopup(data-role='popup')  
             form(method="post" action="./資料送去的位址.php")
               input(
@@ -45,22 +46,20 @@ html
               )
               botton(type="submit")發佈
 
-      .divider
-        .line
-        .word
-          p  分類
+      #divider
+        #line
+        p  分類
         select#category
           option(value='recommend')推薦
           option(value='recommend')推薦
           option(value='recommend')推薦
-        .word
-          p 排序
+        p 排序
         select#sort
           option(value='hot')最多人喜歡
           option(value='hot')最多人喜歡
           option(value='hot')最多人喜歡
 
-      .board
+      #board
         .PostUnit
           div(data-page="PostUnit_0")
             .frame
