--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -28,8 +28,8 @@ body
   height: 100%
 
 //<<<<<<< HEAD
-.container
-
+#container
+  width: 8
 
 
 
@@ -48,7 +48,16 @@ body
   color: #FAFCFD;
   cursor: pointer;
   z-index: 1000;
-
+  
+  
+#filter1
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100vw
+  backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
+  -webkit-backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
 
 #eventwindow
   //display: none
@@ -56,8 +65,8 @@ body
   transform: translate(-50%, -50%)
   top: 55%
   left: 50%
-  width: 60%
-  padding-top: 40%
+  width: 45%
+  padding-top: 30%
   background-color: #F5FBFE
   border-radius: 5vw
   border: 5px solid rgba(58, 237, 194, 0.5)
@@ -69,18 +78,18 @@ body
   
   #description
     position: absolute
-    left: 5.5vw
-    top: 5.5vw
+    left: 3.5vw
+    top: 3.5vw
     height: 65%
     width: 60%
     
     h1
-      font-size: 3.5vw
+      font-size: 3vw
       color: #000000
     
     #subtitle
-      margin: 1vw 0 0 0
-      font-size: 1.5vw
+      margin: 0.5vw 0 0 0
+      font-size: 1.3vw
       color: purple
     
     #keywords
@@ -94,22 +103,22 @@ body
     #detail
       font-size: 1.5vw
       color: #000000
-      margin: 2.5vw 0 0 0
-      line-height: 1.5em
+      margin: 0.5vw 0 0 0
+      line-height: 1.7vw
 
   #member
     position: absolute
     transform: translate(0, -100%)
     display: flex
     flex-direction: row
-    bottom: -1.5vw
+    bottom: -1vw
     width: 70%
-    height: 5vw
-    left: 5vw
+    height: 3vw
+    left: 3.3vw
     
     *
       position: relative
-      margin: 0 0.5vw 0 0.5vw
+      margin: 0 0.5vw 0 0
       
     #bar
       width: 5px
@@ -119,9 +128,9 @@ body
       background-color: #B0B0B0
       
     .member
-      height: 5vw
-      width: 5vw
-      border-radius: 2.5vw
+      height: 3vw
+      width: 3vw
+      border-radius: 1.5vw
       background-color: #FFC3B0
 
     #organizer
@@ -144,9 +153,9 @@ body
   
   #exitbtn1
     transform: translate(-50%, 0)
-    top: 5%
+    top: 3vw
     right: -10%
-    width: 2vw
+    width: 1.5vw
     height: auto
   
   #eventoperate
@@ -160,6 +169,7 @@ body
       position: absolute
 
     #flag
+      display: none
       transform: translate(-50%, 0)
       top: 0
       left: 50%
@@ -179,56 +189,53 @@ body
       
     #date
       transform: translate(-50%, -50%)
-      top: 15%
+      top: 6vw
       left: 50%
       opacity: 0.8
-      font-size: 2vw
+      font-size: 1.5vw
 
     #organizerpic
       transform: translate(-50%, -50%)
-      height: 8vw
-      width: 8vw
-      top: 12.5vw
+      height: 6vw
+      width: 6vw
+      top: 10.5vw
       left: 50%
-      border-radius: 4vw
+      border-radius: 3vw
       background-color: green
       
     p
       transform: translate(-50%, -50%)
-      top: 18vw
+      top: 14.7vw
       left: 50%
-      font-size: 2vw
+      font-size: 1.5vw
     
     #likebutton
-      left: 0
+      left: 1vw
       bottom: 1vw
-      height: 5vw
-      width: 5vw
+      height: 3vw
+      width: 3vw
       
       #like-y
-        display: block
-        //{% load static %}
-        //background: url()
+        display: none
+        width: 100%
 
       #like-n
-        display: none
-        //{% load static %}
-        //background: url()
+        display: block
+        width: 100%
     
     #applybutton
-      right: 0
+      right: 0.5vw
       bottom: 1vw
-      height: 5vw
-      width: 5vw
+      height: 3vw
+      width: 3vw
 
       #apply-y
         display: block
-        //{% load static %}
-        //background: url()
+        width: 100%
+        
       #apply-n
         display: none
-        //{% load static %}
-        //background: url()
+        width: 100%
 
   #sent
     position: absolute
@@ -273,8 +280,8 @@ body
   transform: translate(-50%, -50%)
   top: 55%
   left: 50%
-  width: 50%
-  padding: 5%
+  width: 45%
+  padding: 3% 0
   background-color: #F5FBFE
   border-radius: 5vw
   border: 5px solid rgba(58, 237, 194, 0.5)
@@ -286,14 +293,15 @@ body
     transform: translate(-50%, 0)
     top: 3vw
     right: 2vw
-    width: 2vw
+    width: 1.5vw
     height: auto
     
       
   
   #profile
     display: flex
-    margin-bottom: 1vw
+    margin: 1vw 0 1vw 3.5vw
+    height: 4vw
     
     #pic
       height: 4vw
@@ -303,11 +311,10 @@ body
       
     h1
       align-items: center
-      font-size: 3.5vw
-      line-height: 100%
+      font-size: 3vw
+      line-height: 4vw
       //transform: translate(0, -50%)
       margin-left: 1vw
-      top: 50%
       
   ul
     display: flex
@@ -315,7 +322,8 @@ body
     align-items: center
     white-space: nowrasp
     list-style-type: none
-    margin: 0.5vw
+    margin-top: 0.5vw
+    margin-left: 4vw
     width: 90%
 
   li
@@ -325,7 +333,8 @@ body
     word-break: normal
     word-wrap: nowrap
     align-items: center
-    text-align:center
+    text-align: center
+    line-height: 1.5vw
     
     font-size: 1vw
     font-family: var(--font-family-text)
@@ -339,29 +348,29 @@ body
     
       
   .input-area
-    width: 90%
+    width: 70%
     word-break: normal
-    margin: 0.5vw
     border-radius: 2vw
+    margin: 0.5vw 0 0 3.5vw
     padding: 0.7vw 0 0 1vw
+    outline: none
   
   #eventtitle
-    font-size: 2.2vw
+    font-size: 2vw
     height: 2.5vw
     
   #eventsubtitle
-    font-size: 2.2vw
-    height: 2.5vw
-  
+    font-size: 1.7vw
+    height: 2.3vw
   
   #eventdescription
-    font-size: 1.7vw
-    height: 15vw
+    font-size: 1vw
+    height: 7vw
       
   #buttons
     position: absolute
-    height: 5.5vw
-    width: 5.5vw
+    height: 5vw
+    width: 5vw
     right: 2.5vw
     bottom: 2.5vw
     #submit-btn
