--- a/static/sass/homepage.css
+++ b/static/sass/homepage.css
@@ -22,12 +22,61 @@
   margin: 0; }
 
 body {
-  background-color: #FAAD95;
-  width: 100%;
-  height: 100%; }
+  background-color: #FAAD95; }
 
 #container {
-  width: 8; }
+  position: fixed;
+  transform: translate(-50%, 0);
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-around;
+  width: 70%;
+  height: auto;
+  top: 15%;
+  left: 50%;
+  background-color: green; }
+  #container #create {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: red;
+    width: 100%;
+    height: 7vw;
+    border-radius: 2vw; }
+    #container #create #userpic {
+      margin: 0 2vw 0 3vw;
+      width: 5vw;
+      height: 5vw;
+      border-radius: 2.5vw;
+      background-color: yellow; }
+    #container #create #insertbox {
+      height: 3.5vw;
+      width: calc(100% - 13vw);
+      border-radius: 1.2vw;
+      background-color: yellow; }
+  #container #divider {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1vw;
+    background-color: purple; }
+    #container #divider p {
+      margin-right: 0;
+      font-size: 1.5vw; }
+    #container #divider .line {
+      background-color: #F0F0F0;
+      align: center;
+      height: 0.2vw;
+      border: none; }
+    #container #divider #line1 {
+      width: 60%; }
+    #container #divider #line2 {
+      width: 5%; }
 
 #gotop {
   position: fixed;
@@ -308,5 +357,14 @@ body {
     bottom: 2.5vw; }
     #eventcreatewindow #buttons #submit-btn {
       width: 100%; }
+
+#filter1 {
+  display: none; }
+
+#eventwindow {
+  display: none; }
+
+#eventcreatewindow {
+  display: none; }
 
 /*# sourceMappingURL=homepage.css.map */
