--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -23,31 +23,83 @@
   margin: 0
 
 body
-  background-color:#FAAD95
-  width: 100%
-  height: 100%
+  background-color: #FAAD95
 
 //<<<<<<< HEAD
 #container
-  width: 8
+  position: fixed
+  transform: translate(-50%, 0)
+  display: flex
+  justify-content: flex-start
+  align-items: stretch
+  flex-direction: column
+  flex-wrap: wrap
+  align-content: space-around
+  
+  width: 70%
+  height: auto
+  top: 15%
+  left: 50%
+  background-color: green
 
-
-
-
-
-
+  #create
+    display: flex
+    flex-direction: row
+    justify-content: flex-start;
+    align-items: center
+    background-color: red
+    width: 100%
+    height: 7vw
+    border-radius: 2vw
+    
+    #userpic
+      margin: 0 2vw 0 3vw
+      width: 5vw
+      height: 5vw
+      border-radius: 2.5vw
+      background-color: yellow
+    #insertbox
+      height: 3.5vw
+      width: calc(100% - 13vw)
+      border-radius: 1.2vw
+      background-color: yellow
+      
+  #divider
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+    margin: 1vw
+    background-color: purple
+    
+    p
+      margin-right: 0
+      font-size: 1.5vw
+    
+    .line
+      background-color: #F0F0F0
+      align: center
+      height: 0.2vw
+      //margin: 0 1vw
+      border: none
+    #line1
+      width: 60%
+    #line2
+      width: 5%
+      
+        
 
 #gotop 
-  position: fixed;
-  border-radius: 50px;
-  right: 20px;
-  bottom: 30px;
-  padding: 10px 16px;
-  font-size: 25px;
-  background: rgba(228, 211, 211, 0.36);
-  color: #FAFCFD;
-  cursor: pointer;
-  z-index: 1000;
+  position: fixed
+  border-radius: 50px
+  right: 20px
+  bottom: 30px
+  padding: 10px 16px
+  font-size: 25px
+  background: rgba(228, 211, 211, 0.36)
+  color: #FAFCFD
+  cursor: pointer
+  z-index: 1000
   
   
 #filter1
@@ -376,4 +428,10 @@ body
     #submit-btn
       width: 100%
 
+#filter1
+  display: none
+#eventwindow
+  display: none
+#eventcreatewindow
+  display: none
 //>>>>>>> 624262fa0fa70d15c8079445b5ad13cd4ca108c8
